--- a/source/index.html
+++ b/source/index.html
@@ -2,23 +2,16 @@
 layout: default
 ---
 
-<div class="blog-index">
-  {% assign index = true %}
-  {% for post in paginator.posts %}
-  {% assign content = post.content %}
-    <article>
-      {% include article.html %}
-    </article>
+<div class="album-list">
+  <ul>
+  {% for page in site.pages %}
+    {% if page.layout == 'album' %}
+      <li>
+        <a href="{{page.url}}">{{page.title | titlecase}}<a>
+      </li>
+    {% endif %}
   {% endfor %}
-  <div class="pagination">
-    {% if paginator.next_page %}
-      <a class="prev" href="{{paginator.next_page}}">&larr; Older</a>
-    {% endif %}
-    <a href="/blog/archives">Blog Archives</a>
-    {% if paginator.previous_page %}
-    <a class="next" href="{{paginator.previous_page}}">Newer &rarr;</a>
-    {% endif %}
-  </div>
+  </ul>
 </div>
 <aside class="sidebar">
   {% if site.blog_index_asides.size %}
